--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashiqe Protfolio </title>
+    <title>Ashiqe Protfolio </title> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+    <section class="top-banner">
+          <!-- welcome section -->
+   <div class="half-width">
+    <h1>Welcome To</h1>
+    <h1 > <span class="ashik_color">Ashiqur Rahman</span> World!</h1>
+    <h3>Build Climber and Train Stopper</h3>
+    <p>I am Ashiqur Rahman providing web development services for the last 3 years. I develop CMS-based websites such as WordPress, Squarespace, and Wix along with custom-developed ( HTML, CSS, JS, and PHP, Laravel ) websites. I also have experience in System Analysis which helps me in asking the right questions and understanding the clients' requirements.
+        My primary focus
+    </p>
+    <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imashiqe/">HIRE ME</a>
+   </div>
+<!-- image section -->
+   <div class="half-width">
+    <img src="images/ashiqe.png" alt="">
+   </div>
+    </section>
+
+  
 </body>
 </html>
