--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
    </div>
     </section>
 
+    <!-- dreambig section -->
+    <section class="dream-area">
+        <div class="half-width"><img src="images/ashiqe2.png" alt=""></div>
+
+        <div class="half-width">
+            <h1>Dream big </h1>
+            <h2>Become a Softwer Engineer</h2>
+
+            <p class="dw">Currently, I am working as a Full Stack Developer at "Gnexer and 365bazar.com " & working as a full-time Web application Developer at Fiverr & Upwork.com </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/imashiqe/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
   
 </body>
 </html>
